--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -6,14 +6,16 @@ package:
   version: {{ version }}
 
 source:
-  url: https://pypi.io/packages/source/{{ name[0] }}/{{ name }}/pysimstring-{{ version }}.tar.gz
+  url: https://pypi.io/packages/source/{{ name[0] }}/{{ name }}/{{ name }}-{{ version }}.tar.gz
   sha256: d2805d9e0b8e887442f9d9b672f5cf912c1eed91b2ca6bbe8250b86df27dd360
 
 build:
-  script: {{ PYTHON }} -m pip install . -vv
+  script: {{ PYTHON }} -m pip install . --no-deps --no-build-isolation -vv
   number: 0
 
 requirements:
+  build:
+    - {{ compiler('cxx') }}
   host:
     - python
     - pip
@@ -32,9 +34,15 @@ test:
 
 about:
   home: https://github.com/percevalw/simstring
-  summary: Easy to install clone of simstring
-  license: ''
-  license_file: PLEASE_ADD_LICENSE_FILE
+  dev_url: https://github.com/percevalw/simstring
+  doc_url: https://github.com/percevalw/simstring
+  summary: Python Simstring bindings for Linux, OS X and Windows
+  description: Python Simstring bindings for Linux, OS X and Windows
+  license: BSD-3-Clause
+  license_family: BSD
+  # LICENSE file is missing from sdist, but present in repo,
+  # see also https://github.com/percevalw/pysimstring/blob/master/LICENSE
+  license_file: '{{ environ["RECIPE_DIR"] }}/LICENSE'
 
 extra:
   recipe-maintainers:
